--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer mt-auto py-3 bg-dark text-white">
   <div class="container">
-      <span>Made ny Nino!</span>
+      <span>Made by Nino!</span>
   </div>
 </footer>
 </div>
