--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,26 +1,24 @@
+:root {
+  --color1: #3f4768;
+  --color2: #6674a5;
+  --color3: #8fa3e8;
+}
+
 body {
   background-color: #121212;
   color: #f7f7f7;
 }
+
 .main-container-hand {
   display: flex;
   flex: 1;
-  background-color: #3f4768;
+  background-color: var(--color1);
   height: auto;
 }
 .navbar {
   background-color: #333333;
 }
 
-.btn-primary {
-  background-color: #007bff;
-  border-color: #007bff;
-}
-
-.btn-secondary {
-  background-color: #6c757d;
-  border-color: #6c757d;
-}
 @media (max-width: 999px) {
   .main-container {
     max-width: 100%;
@@ -30,4 +28,29 @@ body {
 
 .disabled-rule {
   text-decoration: line-through;
+}
+
+.btn-primary {
+  margin: 1rem 0;
+  background-color: var(--color1);
+  border-color: var(--color1);
+}
+.btn-primary:hover {
+  background-color: var(--color2);
+  border-color: var(--color2);
+}
+.btn-primary:focus {
+  background-color: var(--color2);
+  border-color: var(--color2);
+  box-shadow: 0 0 0 0.2rem var(--color1);
+}
+
+input[type='radio']:checked {
+  background-color: var(--color1);
+  border-color: var(--color1);
+}
+input[type='radio']:checked:focus {
+  background-color: var(--color2);
+  border-color: var(--color2);
+  box-shadow: 0 0 0 0.2rem var(--color1);
 }
